# homebrew-pandafilter

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  install.sh
.github/workflows/: release.yml
Formula/: ccr.rb  pandafilter.rb
ccr/: Cargo.toml
ccr-core/: Cargo.toml
ccr-core/examples/: bench_summarize.rs
ccr-core/src/: config.rs  delta.rs  global_rules.rs  lib.rs  ov_embed.rs  pipeline.rs  router.rs  structure_map.rs  summarizer.rs
ccr-core/src/focus/: assembler.rs  graph.rs  indexer.rs  mod.rs  query.rs  symbols.rs
ccr-core/tests/: focus_graph.rs  focus_indexer.rs  idea1_clustering.rs  idea2_intent_query.rs  idea4_entropy.rs  idea5_anchoring.rs  idea6_noise_classifier.rs  npu_smoke.rs
ccr-eval/: Cargo.toml
ccr-eval/fixtures/: deploy_log.qa.toml  ffmpeg.qa.toml  ffmpeg.txt  go_build_errors.qa.toml  go_build_errors.txt  go_test_failures.qa.toml  go_test_failures.txt  python_excel.qa.toml  python_excel.txt  python_word.qa.toml  python_word.txt  rsync.qa.toml  rsync.txt
ccr-eval/src/: bench_report.rs  embed_bench.rs  main.rs  runner.rs
ccr-sdk/examples/: conv_compress.rs
ccr-sdk/src/: deduplicator.rs
ccr/src/: analytics_db.rs  bert_budget.rs  error_signatures.rs  hook.rs  intent.rs  lib.rs  main.rs  noise_learner.rs  session.rs  user_filters.rs
ccr/src/cmd/: daemon.rs  discover.rs  doctor.rs  focus.rs  gain.rs  index.rs  mod.rs
ccr/src/handlers/: biome.rs  clippy.rs  ember.rs  ffmpeg.rs  git.rs  go.rs  golangci_lint.rs  grep.rs  mod.rs  next.rs  playwright.rs  pnpm.rs  prettier.rs  prisma.rs  python.rs  read.rs  rsync.rs  stylelint.rs  turbo.rs  util.rs  vite.rs  webpack.rs
ccr/tests/: cursor_init.rs  handler_benchmarks.rs  idea3_delta.rs  idea7_historical_centroid.rs  integration_focus.rs  integration_new_features.rs
docker/: docker-compose.yml  test.sh
docs/src/: App.tsx  index.css
docs/superpowers/specs/: 2026-05-01-npu-raw-openvino-bypass-design.md
