[package]
name = "panda-core"
version = "0.1.0"
edition = "2021"

[dependencies]
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tiktoken-rs.workspace = true
once_cell = "1"
fastembed = { version = "4", default-features = false, features = ["hf-hub-native-tls", "ort-load-dynamic"] }
ort = { version = "=2.0.0-rc.9", default-features = false, features = ["load-dynamic"] }
rusqlite = { version = "0.31", features = ["bundled"] }
walkdir = "2"

[dev-dependencies]
tempfile = "3"
