[package]
name = "panda-core"
version = "0.1.0"
edition = "2021"

[dependencies]
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tiktoken-rs.workspace = true
once_cell = "1"
fastembed = { version = "4", default-features = false, features = ["hf-hub-native-tls", "ort-load-dynamic"] }
hf-hub = { version = "0.4", default-features = false, features = ["ureq", "native-tls"] }
ort = { version = "=2.0.0-rc.9", default-features = false, features = ["load-dynamic"] }
openvino = { git = "https://github.com/intel/openvino-rs", rev = "e25f1f848edc", features = ["runtime-linking"] }
openvino-sys = { git = "https://github.com/intel/openvino-rs", rev = "e25f1f848edc", features = ["runtime-linking"] }
tokenizers = { version = "0.22", default-features = false, features = ["fancy-regex"] }
rusqlite = { version = "0.31", features = ["bundled"] }
walkdir = "2"

[dev-dependencies]
tempfile = "3"
