[package]
name = "ccr-eval"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ccr-eval"
path = "src/main.rs"

[dependencies]
ccr-core = { path = "../ccr-core" }
ccr-sdk  = { path = "../ccr-sdk" }
ccr      = { path = "../ccr" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
reqwest = { version = "0.12", features = ["blocking", "json"] }
