[package]
name = "ccr"
version = "0.5.14"
edition = "2021"

[[bin]]
name = "ccr"
path = "src/main.rs"

[lib]
name = "ccr"
path = "src/lib.rs"

[dependencies]
ccr-core = { path = "../ccr-core" }
ccr-sdk  = { path = "../ccr-sdk"  }
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
anyhow.workspace = true
thiserror.workspace = true
clap.workspace = true
dirs = "5"
owo-colors.workspace = true
atty = "0.2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
