[package]
name = "panda"
version = "1.3.3"
edition = "2021"

[[bin]]
name = "panda"
path = "src/main.rs"

[lib]
name = "panda"
path = "src/lib.rs"

[dependencies]
panda-core = { path = "../ccr-core" }
panda-sdk  = { path = "../ccr-sdk"  }
once_cell = "1"
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
anyhow.workspace = true
thiserror.workspace = true
clap.workspace = true
dirs = "5"
owo-colors.workspace = true
atty = "0.2"
sha2.workspace = true
hex.workspace  = true
rusqlite.workspace = true

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
panda-core = { path = "../ccr-core" }
serde_json = { workspace = true }
